<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    
    
    >

<ScrollView 
     		android:layout_width="fill_parent"
     		android:layout_height="wrap_content">
    
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/about_text"
        android:textSize="17sp"
        />
    
    <TextView
        android:id="@+id/indicator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indicator"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        />
    
    <TextView
        android:id="@+id/safe_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indicator_text"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="17sp"
        android:text="@string/safe_range_text"/>
    <TextView
        android:id="@+id/safe_range_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/safe_range"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
      />
    <TextView
        android:id="@+id/reduce_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/safe_range_text"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="17sp"
        android:text="@string/safe_range_above_text"/>
    <TextView
        android:id="@+id/increase_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reduce_value"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
       /> 
   

</RelativeLayout>

</ScrollView>


</LinearLayout>
