<?xml version="1.0" encoding="utf-8"?>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:enviroCar="http://envirocar.org"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:id="@+id/consumption_view"
            
            
            >
            
            <TextView 
                android:id="@+id/fuel_consumption" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:drawableRight="@drawable/help_icon" 
                android:text="@string/fuel_consumption"
                android:textColor="#6B0000"
                android:textSize="18sp"
                android:gravity="top"/> 

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                
                <org.envirocar.app.views.LayeredImageRotateView
                    android:id="@+id/consumptionmeterView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    enviroCar:maximumDegree="170.0"
                    enviroCar:maximumScaleValue="250.0"
                    enviroCar:minimumDegree="10.0"
                    enviroCar:minimumScaleValue="0.0"
                    enviroCar:rotatableImageViewid="@+id/arrowImage" >

                    <org.envirocar.app.views.HalfViewWidthImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/speed"
                        android:src="@drawable/phenometer_speed"
                        enviroCar:widthRelatedPredecessingView="@+id/vehicle_view" />

                    <org.envirocar.app.views.HalfViewWidthImageView
                        android:id="@+id/arrowImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/halfViewWidthImageView1"
                        android:contentDescription="@string/speed"
                        android:src="@drawable/phenometer_speed_arrow"
                        
                         />
                    
                     <TextView
                        android:id="@+id/fuelInitial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/arrowImage"
                        android:layout_marginTop="70dp"
                        android:textColor="#8bbb3f" 
                        
                        />

                    <TextView
                        android:id="@+id/fuelMid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="37dp" 
                        android:textColor="#8bbb3f"/>

                    <TextView
                        android:id="@+id/fuelEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/arrowImage"
                        android:layout_marginTop="70dp" 
                        android:textColor="#8bbb3f"/>

                    <org.envirocar.app.views.SizeRelatedTextView
                        android:id="@+id/textViewConsumptionDashboard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/arrowImage"
                        android:layout_centerHorizontal="true"
                        android:text="@string/consumption_initial_value"
                        android:textColor="#8bbb3f"
                        enviroCar:sizeRelatedPredecessingView="@+id/arrowImage"  
                        enviroCar:targetTextString="01234567890" />
                </org.envirocar.app.views.LayeredImageRotateView>

            </LinearLayout>
            
            
		
        </LinearLayout>
    